<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>net.unicon</groupId>
    <artifactId>lti13demo</artifactId>
    <version>0.2-SNAPSHOT</version>
    <inceptionYear>2021</inceptionYear>
    <name>LTI 1.3 Java Demo</name>
    <description>LTI 1.3 Java tool to demo LTI 1.3 and Advantage</description>

    <properties>
        <java.version>17</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>4.26.0</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
            <scope>provided</scope>
        </dependency>

        <!--<dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>-->

        <!-- Utilities-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.12</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.14.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.0.0-android</version>
        </dependency>

        <!-- JWT -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.12.5</version>
        </dependency>
        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>9.37.3</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>debug</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <configuration>
                            <jvmArguments><!-- debug on port 5005 -->
                                -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
                            </jvmArguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-surefire-provider</artifactId>
                        <version>1.1.0</version>
                    </dependency>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>5.5.2</version>
                    </dependency>
                </dependencies>
            </plugin>
            <!--Uncomment for PMD-->
            <!--<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-pmd-plugin</artifactId>
                     <version>3.13.0</version>
                     <configuration>
                        <printFailingErrors>true</printFailingErrors>
                    </configuration>
            </plugin>-->
            <!-- OWASP PLUGIN. Uncomment to run the report -->
            <!--<plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>6.1.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>-->

<!--            <plugin>-->
<!--                &lt;!&ndash; Used to replace the headers of files with proper licenses - -->
<!--                  http://code.google.com/p/maven-license-plugin - -->
<!--                  Run mvn license:format to fix up licenses on all files in the project &ndash;&gt;-->
<!--                <groupId>com.mycila.maven-license-plugin</groupId>-->
<!--                <artifactId>maven-license-plugin</artifactId>-->
<!--                <version>1.10.b1</version>-->
<!--                <configuration>-->
<!--                    <strictCheck>true</strictCheck>-->
<!--                    <header>${basedir}/LICENSE_HEADER</header>-->
<!--                    <properties>-->
<!--                        <name>${project.name}</name>-->
<!--                        <year>${project.inceptionYear}</year>-->
<!--                        <holder>Unicon (R)</holder>-->
<!--                    </properties>-->
<!--                    <excludes>-->
<!--                        <exclude>.gitignore</exclude>-->
<!--                        <exclude>.scannerwork/**</exclude>-->
<!--                        <exclude>target/**</exclude>-->
<!--                        <exclude>bin/**</exclude>-->
<!--                        <exclude>.idea/**</exclude>-->
<!--                        <exclude>**/*.iml</exclude>-->
<!--                        <exclude>LICENSE*</exclude>-->
<!--                        <exclude>NOTICE*</exclude>-->
<!--                        <exclude>**/*.properties</exclude>-->
<!--                        <exclude>**/*.csv</exclude>-->
<!--                        <exclude>**/*.txt</exclude>-->
<!--                        <exclude>**/*.md</exclude>-->
<!--                        <exclude>**/*.css</exclude>-->
<!--                        <exclude>**/*.sql</exclude>-->
<!--                        <exclude>**/*.json</exclude>-->
<!--                        <exclude>**/*.jks</exclude>-->
<!--                        <exclude>mvnw*</exclude>-->
<!--                        <exclude>**/js/jquery/**</exclude>-->
<!--                        <exclude>**/SameSiteCookieValve.java</exclude>-->
<!--                        <exclude>**/db/changelog/**</exclude>-->
<!--                        <exclude>.jpb/**</exclude>-->
<!--                    </excludes>-->
<!--                    <mapping>-->
<!--                        <tag>DYNASCRIPT_STYLE</tag>-->
<!--                    </mapping>-->
<!--                    <encoding>UTF-8</encoding>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <goals>-->
<!--                            <goal>check</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>

    </build>
    <!--Uncomment for PMD-->
    <!-- <reporting>
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-pmd-plugin</artifactId>
             <version>3.13.0</version>
         </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jxr-plugin</artifactId>
             <version>3.1.1</version>
             <configuration>
                 <htmlExtension>true</htmlExtension>
             </configuration>
         </plugin>
     </plugins>
 </reporting>-->
</project>
